# rust-series-example1

./: Cargo.toml  README.md  make_animated_gif.sh
licenses/: mit.md
src/: grid.rs  lib.rs  main.rs  save.rs
